--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   freezed: ^0.14.2
   freezed_annotation:
+  retrofit: ^2.0.0
 
 dev_dependencies:
   flutter_test:
