--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
   freezed_annotation:
   retrofit: ^2.0.0
   dio: ^4.0.0
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
   retrofit_generator:
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
