--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dev_dependencies:
   retrofit_generator:
   json_serializable:
 
+dependency_overrides:
+  retrofit_generator:
+    git:
+      url: https://github.com/trevorwang/retrofit.dart
+      ref: master
+      path: generator
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
