--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   retrofit: ^2.0.0
   dio: ^4.0.0
   json_annotation:
+  webview_flutter: ^2.0.8
 
 dev_dependencies:
   flutter_test:
